// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChirpCard for deletion render correct for a deleted chirp 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "column",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": 60,
          }
        }
      >
        ProfileIcon
      </View>
      <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "fontSize": 18,
              "marginTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Douglas Adams
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "gray",
              "fontSize": 18,
              "paddingBottom": 20,
              "paddingTop": 10,
              "width": 520,
            }
          }
        >
          This chirp was deleted
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "fontSize": 18,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            {"name":"chatbubbles","size":16,"color":"black"}
            <Text>
                0
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": "auto",
          "width": 550,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "flex-start",
              "fontSize": 20,
              "fontWeight": "bold",
              "lineHeight": 26,
              "marginHorizontal": 10,
              "padding": 20,
              "paddingLeft": 10,
              "textAlign": "center",
            }
          }
        >
          Chirp deletion
        </Text>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "left",
          }
        }
      >
        Are you sure you want to delete this chirp?
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "paddingBottom": 20,
          }
        }
      >
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </Modal>,
]
`;

exports[`ChirpCard for deletion renders correctly for non-sender 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "column",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": 60,
          }
        }
      >
        ProfileIcon
      </View>
      <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "fontSize": 18,
              "marginTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Douglas Adams
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 20,
              "paddingTop": 10,
              "width": 520,
            }
          }
        >
          Don't panic.
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "fontSize": 18,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-up"
            >
              {"name":"thumbs-up-sharp","size":16,"color":"black"}
            </View>
            <Text>
                1
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-down"
            >
              {"name":"thumbs-down-sharp","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="heart"
            >
              {"name":"heart","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            {"name":"chatbubbles","size":16,"color":"black"}
            <Text>
                0
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": "auto",
          "width": 550,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "flex-start",
              "fontSize": 20,
              "fontWeight": "bold",
              "lineHeight": 26,
              "marginHorizontal": 10,
              "padding": 20,
              "paddingLeft": 10,
              "textAlign": "center",
            }
          }
        >
          Chirp deletion
        </Text>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "left",
          }
        }
      >
        Are you sure you want to delete this chirp?
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "paddingBottom": 20,
          }
        }
      >
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </Modal>,
]
`;

exports[`ChirpCard for deletion renders correctly for sender 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "column",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": 60,
          }
        }
      >
        ProfileIcon
      </View>
      <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "fontSize": 18,
              "marginTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Douglas Adams
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 20,
              "paddingTop": 10,
              "width": 520,
            }
          }
        >
          Don't panic.
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "fontSize": 18,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-up"
            >
              {"name":"thumbs-up-sharp","size":16,"color":"black"}
            </View>
            <Text>
                1
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-down"
            >
              {"name":"thumbs-down-sharp","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="heart"
            >
              {"name":"heart","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            {"name":"chatbubbles","size":16,"color":"black"}
            <Text>
                0
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginRight": "auto",
          }
        }
      >
        <View
          accessibilityLabel="deleteChirpButton"
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          {"name":"close-outline","size":20,"color":"red"}
        </View>
      </View>
      <View
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": "auto",
          "width": 550,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "flex-start",
              "fontSize": 20,
              "fontWeight": "bold",
              "lineHeight": 26,
              "marginHorizontal": 10,
              "padding": 20,
              "paddingLeft": 10,
              "textAlign": "center",
            }
          }
        >
          Chirp deletion
        </Text>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "left",
          }
        }
      >
        Are you sure you want to delete this chirp?
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "paddingBottom": 20,
          }
        }
      >
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </Modal>,
]
`;

exports[`ChirpCard for reaction renders correctly with reaction 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "column",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": 60,
          }
        }
      >
        ProfileIcon
      </View>
      <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "fontSize": 18,
              "marginTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Douglas Adams
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 20,
              "paddingTop": 10,
              "width": 520,
            }
          }
        >
          Don't panic.
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "fontSize": 18,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-up"
            >
              {"name":"thumbs-up-sharp","size":16,"color":"black"}
            </View>
            <Text>
                1
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-down"
            >
              {"name":"thumbs-down-sharp","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="heart"
            >
              {"name":"heart","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            {"name":"chatbubbles","size":16,"color":"black"}
            <Text>
                0
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginRight": "auto",
          }
        }
      >
        <View
          accessibilityLabel="deleteChirpButton"
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          {"name":"close-outline","size":20,"color":"red"}
        </View>
      </View>
      <View
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": "auto",
          "width": 550,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "flex-start",
              "fontSize": 20,
              "fontWeight": "bold",
              "lineHeight": 26,
              "marginHorizontal": 10,
              "padding": 20,
              "paddingLeft": 10,
              "textAlign": "center",
            }
          }
        >
          Chirp deletion
        </Text>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "left",
          }
        }
      >
        Are you sure you want to delete this chirp?
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "paddingBottom": 20,
          }
        }
      >
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </Modal>,
]
`;

exports[`ChirpCard for reaction renders correctly without reaction 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "column",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": 60,
          }
        }
      >
        ProfileIcon
      </View>
      <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "fontSize": 18,
              "marginTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Anonymous
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 18,
              "paddingBottom": 20,
              "paddingTop": 10,
              "width": 520,
            }
          }
        >
          Ignore me
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "fontSize": 18,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-up"
            >
              {"name":"thumbs-up-sharp","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="thumbs-down"
            >
              {"name":"thumbs-down-sharp","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="heart"
            >
              {"name":"heart","size":16,"color":"black"}
            </View>
            <Text>
                0
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginRight": 10,
              }
            }
          >
            {"name":"chatbubbles","size":16,"color":"black"}
            <Text>
                0
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": "auto",
          "width": 550,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "flex-start",
              "fontSize": 20,
              "fontWeight": "bold",
              "lineHeight": 26,
              "marginHorizontal": 10,
              "padding": 20,
              "paddingLeft": 10,
              "textAlign": "center",
            }
          }
        >
          Chirp deletion
        </Text>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "left",
          }
        }
      >
        Are you sure you want to delete this chirp?
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "paddingBottom": 20,
          }
        }
      >
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </Modal>,
]
`;
